# PyOptBook

./: pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  post_create.sh
2.tutorial/notebook/: tutorial.py  tutorial_python-mip.py
3.school/: shool_balance_opt.py
3.school/notebook/: school.py  school_python-mip.py
7.recommendation/notebook/: recommendation.py  recommendation_cvxpy.py
python_interactive_window/2.tutorial/notebook/: tutorial_scipy_optimize_milp.py
python_interactive_window/3.school/notebook/: school_python-mip.py  shool_balance_score_cumulative.py  shool_balance_score_group_cumulative.py  shool_balance_score_group_wise.py  shool_balance_score_wise.py
python_interactive_window/4.coupon/notebook/: coupon.py
python_interactive_window/5.routing/notebook/: routing.py
python_interactive_window/5.routing_ver2/notebook/: routing_ver2.py
python_interactive_window/7.recommendation/notebook/: recommendation_ver2.py
