[project]
name = "pyoptbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxopt>=1.3.2",
    "cvxpy>=1.5.3",
    "fastapi>=0.115.4",
    "flask>=3.0.3",
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "mip>=1.15.0",
    "notebook>=7.0.7",
    "numpy>=2.1.2",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "polars>=1.12.0",
    "pulp>=2.9.0",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
